--- a/CICD-Jenkins-ECR-HELM-EKS/helm-charts/values.yaml
+++ b/CICD-Jenkins-ECR-HELM-EKS/helm-charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 277565952452.dkr.ecr.us-east-1.amazonaws.com/project-ecr-repo
+  repository: 456555753493.dkr.ecr.eu-north-1.amazonaws.com/xyz-app-ecr
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "replace_image_tag"
@@ -40,7 +40,7 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: LoadBalancer
   port: 8080
   targetPort: 8080
 
